t13-ambulance/t13-ambulance-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t13-ambulance-webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: t13-ambulance-webapi-label
  template:
    metadata:
      labels:
        pod: t13-ambulance-webapi-label
    spec:
      containers:
        - name: t13-ambulance-webapi-container
          image: laderit/ambulance-webapi-project:1.0.0-82
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
