t13-ambulance/t13-ambulance-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: t13-ambulance-webapi
spec:
  type: ClusterIP
  selector:
    pod: t13-ambulance-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
